--- a/sponsor.html
+++ b/sponsor.html
@@ -76,7 +76,7 @@
 			<nav class="ink-navigation ink-grid hide-all show-small">
 				<ul class="menu vertical flat black">
 					<li class="title">
-						<a class="logoPlaceholder push-left" href="#" title="SINFO">Sponsor  <img src="img/logotext.png"></a>
+						<a class="logoPlaceholder push-left" href="#" title="SINFO">Sponsor<img src="img/logotext.png"></a>
 						<button class="toggle" data-target="#topbar_menu"><span class="fa fa-reorder"></span></button>
 					</li>
 				</ul>
@@ -414,14 +414,14 @@
 										<tr>
 					            <th class="all-40">Item</th>
 					            <th class="all-15">Minimum</th>
-					            <th class="all-15">Média</th>
-					            <th class="all-15">Alta</th>
-					            <th class="all-15">Exclusiva</th>
+					            <th class="all-15">Medium</th>
+					            <th class="all-15">Maximum</th>
+					            <th class="all-15">Exclusive</th>
 										</tr>
 									</thead>
 									<tbody>
 									<tr class="item alternate">
-                    <td><div class="toggle">+</div>Cover's documentation</td><td>1</td><td>1</td><td>L</td><td>L</td>
+                    <td><div class="toggle">+</div>Cover's documentation</td><td>1</td><td>1</td><td>1</td><td>1</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Cover's documentation</h3>
@@ -430,7 +430,7 @@
                     </td></tr>
                   </tr>
                   <tr class="item">
-										<td><div class="toggle">+</div>Cover's logo</td><td>S</td><td>S</td><td>L</td><td>L</td>
+										<td><div class="toggle">+</div>Cover's logo</td><td>S</td><td>S</td><td>M</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Cover's logo</h3>
@@ -439,7 +439,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item alternate">
-                    <td><div class="toggle">+</div>Logo on our programs</td><td>S</td><td>S</td><td>L</td><td>L</td>
+                    <td><div class="toggle">+</div>Logo on our programs</td><td>S</td><td>S</td><td>M</td><td>L</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Logo on our programs</h3>
@@ -449,7 +449,7 @@
                           </td></tr>
                   </tr>
                   <tr class="item alternate">
-										<td><div class="toggle">+</div>Presentation posts on our Social Networks</td><td>1</td><td>2</td><td>2</td><td>3</td>
+										<td><div class="toggle">+</div>Presentation posts on our Social Networks</td><td>1</td><td>2</td><td>3</td><td>5</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Presentation posts on our Social Networks</h3>
@@ -471,7 +471,7 @@
 							      </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Showcase logo</td><td>S</td><td>S</td><td>L</td><td>L</td>
+										<td><div class="toggle">+</div>Showcase logo</td><td>S</td><td>S</td><td>M</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Showcase logo</h3>
@@ -479,11 +479,54 @@
 											</div>
 							            </td></tr>
 									</tr>
-
-
-
+                  <tr class="item">
+                    <td><div class="toggle">+</div>Logo on our banners</td><td>-</td><td>-</td><td>M</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on our banners</h3>
+                        <p>TThe Company logo will be on the banners located at both principal entries of Instituto Superior Técnico during the event.</p>
+                        <p><small>Banner placed at the main entrance of the IST (at Alameda campus) in the nineteenth edition of SINFO.</small></p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Logo on our Social Network's cover</td><td>-</td><td>-</td><td>M</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on our Social Network's cover</h3>
+                        <p>The Company logo will be on our Social Network's cover.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Logo on our website (everywhere)</td><td>-</td><td>-</td><td>M</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on our website (everywhere)</h3>
+                        <p>The Company logo will be on SINFO’s website and will be visible on every page and section of the website.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item">
+                    <td><div class="toggle">+</div>T-shirt logo</td><td>-</td><td>-</td><td>M</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>T-shirt logo</h3>
+                        <p>The Company logo will be on the back of our t-shirts that are sold at SINFO’s stand during the event.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item">
+                    <td><div class="toggle">+</div>Logo during the break of our live stream</td><td>-</td><td>-</td><td>M</td><td>L</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo during the break of our live stream</h3>
+                        <p>SINFO will be transmitted online through our live stream. The Company will have their logo shown during the transmission's breaks. This offers an additional way of reaching people who couldn't make it to the event</p>
+                      </div>
+                          </td></tr>
+                  </tr>
 									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our poster</td><td>-</td><td>M</td><td>L</td><td>L</td>
+										<td><div class="toggle">+</div>Logo on our poster</td><td>-</td><td>-</td><td>M</td><td>L</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on our poster</h3>
@@ -492,7 +535,7 @@
 							            </td></tr>
 									</tr>
 									<tr class="item">
-										<td><div class="toggle">+</div>Logo on tray mats</td><td>-</td><td>M</td><td>L</td><td>L</td>
+										<td><div class="toggle">+</div>Logo on tray mats</td><td>-</td><td>-</td><td>-</td><td>-</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
 								            	<h3>Logo on tray mats</h3>
@@ -504,107 +547,8 @@
 											</div>
 							            </td></tr>
 									</tr>
-									
 									<tr class="item">
-										<td><div class="toggle">+</div>T-shirt logo</td><td>-</td><td>-</td><td>L</td><td>XL</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>T-shirt logo</h3>
-												<p>The Company logo will be on the back of our t-shirts that are sold at SINFO’s stand during the event.</p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our website (everywhere)</td><td>-</td><td>M</td><td>L</td><td>XL</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our website (everywhere)</h3>
-												<p>The Company logo will be on SINFO’s website and will be visible on every page and section of the website.</p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item">
-										<td><div class="toggle">+</div>Logo on our banners</td><td>-</td><td></td><td>L</td><td>L</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our banners</h3>
-												<p>TThe Company logo will be on the banners located at both principal entries of Instituto Superior Técnico during the event.</p>
-												<p><small>Banner placed at the main entrance of the IST (at Alameda campus) in the nineteenth edition of SINFO.</small></p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our Social Network's cover</td><td>-</td><td>-</td><td>L</td><td>XL</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our Social Network's cover</h3>
-												<p>The Company logo will be on our Social Network's cover.</p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item">
-										<td><div class="toggle">+</div>Logo during the break of our live stream</td><td>-</td><td>-</td><td>√</td><td>√</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo during the break of our live stream</h3>
-												<p>SINFO will be transmitted online through our live stream. The Company will have their logo shown during the transmission's breaks. This offers an additional way of reaching people who couldn't make it to the event</p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item alternate">
-										<td><div class="toggle">+</div>Custom commercial</td><td>-</td><td>-</td><td>√</td><td>√</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Custom commercial</h3>
-												<p>SINFO will spread the Company’s promos/commercials on the screens scattered all around the event.</p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item">
-										<td><div class="toggle">+</div>Logo on our merchandising</td><td>-</td><td>-</td><td>-</td><td>√</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our merchandising</h3>
-												<p>The Company logo will be on the merchandise sold at SINFO’s stand during the event.</p>
-												<ul>
-													<li>Notebooks</li>
-													<li>Pins</li>
-													<li>Stress balls</li>
-													<li>Coin purse</li>
-													<li>Bracelets</li>
-												</ul>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our pens</td><td>-</td><td>-</td><td>-</td><td>√</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our pens</h3>
-												<p> The Company logo will be on the pens that we will be giving out during the event.</p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item">
-										<td><div class="toggle">+</div>Logo on our website (header)</td><td>-</td><td>-</td><td>-</td><td>L</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our website (header)</h3>
-												<p> The Company logo will be on the header of SINFO’s website, visible on every page.</p>
-											</div>
-							            </td></tr>
-									</tr>
-									<tr class="item alternate">
-										<td><div class="toggle">+</div>Logo on our live stream (static)</td><td>-</td><td>-</td><td>-</td><td>L</td>
-							            <tr class="description"><td colspan="5" class="noPadding">
-							            	<div class="shadow">
-								            	<h3>Logo on our live stream (static)</h3>
-												<p> The Company logo will be on the live stream as a watermark, on a corner of the live stream during the total duration of it.</p>
-											</div>
-							            </td></tr>
-									</tr>
-                  <tr class="item">
-                    <td><div class="toggle">+</div>Logo on online banners</td><td>-</td><td>-</td><td>-</td><td>L</td>
+                    <td><div class="toggle">+</div>Logo on online banners</td><td>-</td><td>-</td><td>M</td><td>L</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Logo on online banners</h3>
@@ -612,6 +556,58 @@
                       </div>
                           </td></tr>
                   </tr>
+									<tr class="item">
+                    <td><div class="toggle">+</div>Logo on our merchandising</td><td>-</td><td>-</td><td>-</td><td>√</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on our merchandising</h3>
+                        <p>The Company logo will be on the merchandise sold at SINFO’s stand during the event.</p>
+                        <ul>
+                          <li>Notebooks</li>
+                          <li>Pins</li>
+                          <li>Stress balls</li>
+                          <li>Coin purse</li>
+                          <li>Bracelets</li>
+                        </ul>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Logo on our pens</td><td>-</td><td>-</td><td>-</td><td>√</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on our pens</h3>
+                        <p> The Company logo will be on the pens that we will be giving out during the event.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Custom commercial</td><td>-</td><td>-</td><td>-</td><td>√</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Custom commercial</h3>
+                        <p>SINFO will spread the Company’s promos/commercials on the screens scattered all around the event.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td><div class="toggle">+</div>Logo on our live stream (static)</td><td>-</td><td>-</td><td>-</td><td>√</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on our live stream (static)</h3>
+                        <p> The Company logo will be on the live stream as a watermark, on a corner of the live stream during the total duration of it.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+									<tr class="item">
+										<td><div class="toggle">+</div>Logo on our website (header)</td><td>-</td><td>-</td><td>-</td><td>-</td>
+							            <tr class="description"><td colspan="5" class="noPadding">
+							            	<div class="shadow">
+								            	<h3>Logo on our website (header)</h3>
+												<p> The Company logo will be on the header of SINFO’s website, visible on every page.</p>
+											</div>
+							            </td></tr>
+									</tr>
 									<tr class="price">
 										<td>Price</td><td>450€</td><td>600€</td><td>1.500€</td><td>2.500€</td>
 									</tr>
