Updated choose class

--- a/sponsor.html
+++ b/sponsor.html
@@ -388,7 +388,7 @@
 									<tr class="alterprice">
 										<td>Individual Price</td><td>1.360€</td><td>2.660€</td><td>4.595€</td><td>7.805€</td>
 									</tr>
-                  <tr>
+                  <tr class="choose">
                      <td colspan="5">* Choose just one: either a presentation or 2 days of stand.</td>
                   </tr>
 									<tr class="perks">
