Updated Annual itens, Reasons to sponsor list, updated Perks list

--- a/sponsor.html
+++ b/sponsor.html
@@ -117,16 +117,15 @@
 			<div id="reasons" class="column-group gutters">
 				<div class="all-100">
 					<h2>Reasons to sponsor</h2>
-					<ul>
-						<li>To give information about the company to potential <b>future employees</b>, graduated in a college with excellent national and international renown.</li>
-						<li>To project the company's image and brand, in the media (in previous editions, we were advertised, or covered, by Expresso, Correio da Manhã, RTP2, SIC Radical and many others).</li>
-						<li>To publicize <b>opportunities for internships and MsC/Phd theses</b> offered by your company</li>
-						<li>To highlight the company's brand, compared to its competitors.</li>
-            <li>To collect statistical data and opinions of visitors regarding the participation of the company, gathered from surveys carried out, during the event.</li>
-            <li>The Company presentation slides can be made available, to the general public, in our website.</li>
-            <li>Coffee-break for the company speakers.</li>
-            <li>The participants <b>CV's</b>, for companies who purchased packages.</li>
-					</ul>
+            <ul>
+              <li>Do you want to recruit the best of the best from Portuguese universities? Are the more than 4000 participants, interested in Full Time, Part-time and internships jobs, music to your ears?</li>
+              <li>Do you want to promote, advertise and make your company known to future potential employees?</li>
+              <li>Do you want to highlight your company's brand compared to its competitors?</li>
+						  <li>Do you want to advertise your company nationally and internationally and increase your airtime on the media?</li>
+              <li>Do your want to network and form interesting business partnerships and connections?</li>
+              <li>Do you want to see the latest on the Portuguese IT market and worldwide tech hot topics, as well as the newest gadgets on the market and their applications?</li>
+            </ul>
+            <p class="reasons"><b>Then your answer to all this is right here with SINFO! Check down below and be quick to book your presence!</b></p>
 				</div>
 			</div>
       <div id="reasons" class="column-group gutters">
@@ -157,95 +156,97 @@
 								</thead>
 								<tbody>
 								<tr class="item">
-									<td><div class="toggle">+</div>Custom Social Network Post(s)</td><td>3</td><td>3</td><td>2</td><td>1</td>
+									<td><div class="toggle">+</div>Custom Post(s)</td><td>3</td><td>3</td><td>2</td><td>1</td>
 						            <tr class="description"><td colspan="5" class="noPadding">
 						            	<div class="shadow">
-							            	<h3>Custom Social Network Post(s)</h3>
-											<p>You can write one or more  posts, custom it, according to the company's criteria and we'll post it for you on our social networks.</p>
+							            	<h3>Custom Post(s)</h3>
+											<p>We can write a custom post for your company, according to its criteria, that can target our social audience effectively, and post it for you on our social networks and channels. You may also choose to write your own post, or even make a video, and send us your preferred publicity guidelines.</p>
 										</div>
 						            </td></tr>
 								</tr>
-                <tr class="item">
+                <tr class="item alternate">
                   <td><div class="toggle">+</div>Event Sponsorship</td><td>3</td><td>2</td><td>1</td><td>1</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
                             <h3>Event Sponsorship</h3>
-                      <p>The Company will be able to sponsorship one of the many events held by SINFO throughout the year. Such as Workshops, Hacktons, DevCamps, etc.</p>
+                      <p>You can be the proud sponsor of one of the many Workshops, Dev Camps, Dev Sessions, Hackatons and many other events held by SINFO throughout the year both in IST and other Universities. Some sessions are cross-university and you can both pick your favourite or pitch a new suggestion to us!</p>
                     </div>
                         </td></tr>
                 </tr>
                 <tr class="item">
-                  <td><div class="toggle">+</div>Curriculums</td><td>3</td><td>2</td><td>1</td><td>1</td>
+                  <td><div class="toggle">+</div>Curricula</td><td>3</td><td>2</td><td>1</td><td>1</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
-                            <h3>Curriculums</h3>
-                      <p>The Company will be granted access to SINFO’s CV database. We collect CV’s from every student during the year, which are willing to share it with us with the purpose of it being forwarded to the Companies.</p>
+                            <h3>Curricula</h3>
+                      <p>Access to SINFO’s CV database, with CVs from students collected not only during the main event but as of this year they are now collected, updated and processed throughout the year. This access can be requested as many times as contracted in the sponsor pack and can be personalized. Example, a company might ask only for the students available right now, or in two months for example, or even the ones that are interested in internships.</p>
                     </div>
                         </td></tr>
                 </tr>
-
+                <tr class="item alternate">
+                  <td><div class="toggle">+</div>Logo on panfeletos - Missing</td><td>-</td><td>-</td><td>-</td><td>-</td>
+                </tr>
                 <tr class="item">
-                  <td><div class="toggle">+</div>Logo on our annual rollups</td><td>L</td><td>M</td><td>S</td><td>-</td>
+                  <td><div class="toggle">+</div>Logo on standard rollups</td><td>L</td><td>M</td><td>S</td><td>-</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
-                            <h3>Logo on our annual rollups</h3>
-                      <p>The Company logo will be on our annual rollup which is used at every event we have throughout the year (workshops, meetups, DevCamps, etc.</p>
+                            <h3>Logo on standard rollups</h3>
+                      <p>The Company logo will be on our standard rollup which is used at every event we have throughout the year (workshops, meetups, DevCamps, etc.).</p>
+                      <div class="column-group push-center half-gutters">
+                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                            <img src="img/sponsors/rollupAn.JPG">
+                          </div>
+                          <div class="all-30 medium-30 small-50 tiny-50 push-center">
+                            <img src="img/sponsors/rollupAn2.JPG">
+                          </div>
+                        </div>
                     </div>
+                    
                         </td></tr>
                 </tr>
+                <tr class="item alternate">
+                  <td><div class="toggle">+</div>Custom Activity - Missing</td><td>-</td><td>-</td><td>-</td><td>-</td>
+                </tr>
                 <tr class="item">
-                  <td><div class="toggle">+</div>Give Workshop/Talk/Challenge/Custom Activity</td><td>2</td><td>-</td><td>1</td><td>-</td>
+                  <td><div class="toggle">+</div>Activity on campus</td><td>2</td><td>1</td><td>-</td><td>-</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
-                            <h3>Give Workshop/Talk/Challenge/Custom Activity</h3>
-                      <p>SINFO will collaborate in the organization and spread of the event held by the Company according to its interests.</p>
+                            <h3>Activity on campus</h3>
+                      <p>SINFO will organize, advertise and operate alongside its partners to make successful activities, such as workshops, challenges, presentations etc. either on an IST campus or in any of the other partner universities.</p>
+                    </div>
+                        </td></tr>
+                </tr>
+                <tr class="item alternate">
+                  <td><div class="toggle">+</div>Activity on company premises</td><td>2</td><td>1</td><td>-</td><td>-</td>
+                        <tr class="description"><td colspan="5" class="noPadding">
+                          <div class="shadow">
+                            <h3>Activity on company premises</h3>
+                      <p>SINFO will co-organize, advertise and operate alongside its partners to make successful activities, such as "open days", job shadowing, challenges, etc. in the company's premises.</p>
                     </div>
                         </td></tr>
                 </tr>
                 <tr class="item">
-                  <td><div class="toggle">+</div>Annual logo permanently on our website</td><td>L</td><td>M</td><td>-</td><td>-</td>
+                  <td><div class="toggle">+</div>Annual logo permanently on our website</td><td>M</td><td>S</td><td>-</td><td>-</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
                             <h3>Annual logo permanently on our website</h3>
-                      <p>The Company logo will be permanently on SINFO’s website header for a year.</p>
+                      <p>The Company logo will be permanently on SINFO’s website header for a whole year.</p>
                     </div>
                         </td></tr>
                 </tr>
-                <tr class="item">
+                <tr class="item alternate">
                   <td><div class="toggle">+</div>Logo on SINFO's frame</td><td>1</td><td>-</td><td>-</td><td>-</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
                             <h3>Logo on SINFO's frame</h3>
-                      <p>The Company logo will be on SINFO’s frame which is used during the event to take pictures with participants, and then shared on our social networks.</p>
+                      <p>The Company logo will be on SINFO's frame which is used during the several events to take pictures with participants, and then shared on our social networks.</p>
                     </div>
                         </td></tr>
                 </tr>
-
-
-								<tr class="item alternate">
-									<td><div class="toggle">+</div>Workshop's Sponsorship</td><td>-</td><td>-</td><td>1</td><td>2</td>
-						            <tr class="description"><td colspan="5" class="noPadding">
-						            	<div class="shadow">
-							            	<h3>Workshop's Sponsorship</h3>
-											<p>You will be the sponsor one or more Workshops organized by SINFO for a year</p>
-										</div>
-						            </td></tr>
-								</tr>
-                <tr class="item alternate">
-                  <td><div class="toggle">+</div>Logo on SINFO's stand</td><td>-</td><td>M</td><td>L</td><td>XL</td>
+                <tr class="item">
+                  <td><div class="toggle">+</div>Dinner with senior students and </br> members of SINFO’s team</td><td>1</td><td>-</td><td>-</td><td>-</td>
                         <tr class="description"><td colspan="5" class="noPadding">
                           <div class="shadow">
-                            <h3>Logo on SINFO's stand</h3>
-                      <p>The Company logo will be on SINFOs stand during the entire event.</p>
-                    </div>
-                        </td></tr>
-                </tr>
-                <tr class="item alternate">
-                  <td><div class="toggle">+</div>Open day at the Company/Job shadowing</td><td>-</td><td>M</td><td>L</td><td>XL</td>
-                        <tr class="description"><td colspan="5" class="noPadding">
-                          <div class="shadow">
-                            <h3>Open day at the Company/Job shadowing</h3>
-                      <p>During the event, SINFO will collaborate in the spread of one of these activities.</p>
+                            <p>The Company will be able to host a private dinner with several seniors recruited according to the Company’s interest, as well as senior members of SINFO’s team.</p>
                     </div>
                         </td></tr>
                 </tr>
@@ -256,17 +257,8 @@
 									<td>Individual Price</td><td>6.750€</td><td>3.975€</td><td>2.250€</td><td>1.200€</td>
 								</tr>
                 <tr class="discount">
-                    <td>Discount</td><td>160€</td><td>310€</td><td>595€</td><td>855€</td>
+                    <td>Discount</td><td>3.250€</td><td>1.475€</td><td>750€</td><td>200€</td>
                   </tr>
-								<tr class="perks">
-									<td colspan="5"><h3>Perks</h3></td>
-								</tr>
-								<tr class="perksDescription">
-									<td colspan="5">
-										<p>Dinner with members of SINFO’s organization team or finalists - The Company will be able to host a private dinner with several members of SINFO’s team along with other students we might recruit according to the Company’s interest.</p>
-                    <p>Curriculums - The Company will be granted access to SINFO’s CV database. We collect CV’s from every student that is willing to share it with us up until two months after the event with the purpose of it being forwarded to the Companies.</p>
-									</td>
-								</tr>
 								</tbody>
 							</table>
 						</div>
@@ -343,14 +335,14 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item">
-                    <td><div class="toggle">+</div>Publicity Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td>
+                  <tr class="item"><a href="#Publicity">
+                    <td><div class="toggle">+</div>Publicity Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td></a>
                   </tr>
                   <tr class="item alternate">
-                    <td><div class="toggle">+</div> +University pack</td><td>1</td><td>1</td><td>1</td><td>-</td>
+                    <td><div class="toggle">+</div> + University pack</td><td>1</td><td>1</td><td>1</td><td>-</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>+University pack</h3>
+                              <h3>+ University pack</h3>
                         <p>This pack allows your company the possibility to be present and advertised on all SINFO’s Partner Universities in addition to IST, these Universities are FEUP, FCUL, ISCTE, UM, FCT-UNL, ISEL among others. With this pack your company can unlock the Stand++ enabling it to be present, the same number of days contracted at IST, in the rest of the Partner Universities. This means your company can easily and cheaply double or even triple the number of stand days reaching, not only IST, but many other universities of your choice!</p>
                       </div>
                    </td></tr>
@@ -402,20 +394,21 @@
 									</tr>
 									<tr class="perksDescription">
 										<td colspan="5">
-											<p>Lunch discount (Civil cafeteria) - The Company members present during the event will have the possibility to have lunch at the Civil cafeteria for a reduced price.</p>
-											<p>Parking during the presentations - The Company will have clearance to park one (1) car inside the Instituto Superior Técnico's parking lot for the duration of the presentation.</p>
-											<p>Access pass to the event for X people - Access to all the event's activities: Talks, Workshops, Presentations, Tech Expo.</p>
-											<p>Wi-Fi Access and Password - Free and unlimited access to Instituto Superior Técnico's Wi-Fi network during the event.</p>
-											<p>Privileged access to talks - Reserved spot at the talks for Company members or invitees during the event.</p>
-											<p>Access to coffee-break - Company members or invitees will have access to the morning and afternoon coffee-breaks.</p>
-											<p>Dinner with members of SINFO’s organization team or finalists - The Company will be able to host a private dinner with several members of SINFO’s team along with other students we might recruit according to the Company’s interest.</p>
-											<p>Curriculums - The Company will be granted access to SINFO’s CV database. We collect CV’s from every student that is willing to share it with us up until two months after the event with the purpose of it being forwarded to the Companies.</p>
+                      <ul>
+		  								  <li><b>Lunch discount (Civil cafeteria)</b> - The Company members present during the event will have the possibility to have lunch at the Civil cafeteria for a very low price;</li>
+	   										<li><b>Parking during the presentations</b> - The Company will have clearance to park one (1) car inside the Instituto Superior Técnico's parking lot for the duration of the presentation;</li>
+  											<li><b>Parking during assembly and dismantling of the stands</b> - The Company will have clearance to park one (1) car inside the Instituto Superior Técnico’s parking lot during the assembly and dismantling of the stands;</li>
+											  <li><b>Full access pass to the event for 2 company representatives</b> - Access to all the event’s activities: Talks, Workshops, Presentations, Tech Expo;</li>
+											  <li><b>Access to the coffee-breaks</b> - Access to the event’s coffee-breaks;</li>
+											  <li><b>Wi-Fi Access</b> - Free and unlimited access to Instituto Superior Técnico’s Wi-Fi network during the event using a company guest password;</li>
+											<li><b>Statistics</b> - Statistical data and opinions of visitors regarding the participation of the company, gathered from surveys carried out, during the event.</li>
+                    </ul>
 										</td>
 									</tr>
 									</tbody>
 								</table>
 							</div>
-							<div class="heading"><div class="toggleHead">+</div>Publicity</div>
+							<div class="heading" id="Publicity"><div class="toggleHead">+</div>Publicity</div>
 							<div class="content">
 								<div class="PackageContent">Package Content</div>
 								<table class="all-100">
