Added scroll to publicity when publicity pack in Main Event is clicked

--- a/sponsor.html
+++ b/sponsor.html
@@ -335,7 +335,7 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item"><a href="#Publicity">
+                  <tr class="item redirectPub">
                     <td><div class="toggle">+</div>Publicity Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td></a>
                   </tr>
                   <tr class="item alternate">
