--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
-          <li><a href="#orador" class="glow">QUEM É ESTE ORADOR?</a></li>
+          <li><a href="#orador" class="glow">Who's this speaker?</a></li>
           <li><a href="code.html">Code of Conduct</a></li>          
         </ul>
       </nav>
