fixed banners info

--- a/sponsor.html
+++ b/sponsor.html
@@ -590,11 +590,11 @@
                           </td></tr>
                   </tr>
                   <tr class="item">
-                    <td><div class="toggle">+</div>Logo on our banners</td><td>L</td><td>M</td><td>-</td><td>-</td>
+                    <td><div class="toggle">+</div>Logo in our physical banners</td><td>L</td><td>M</td><td>-</td><td>-</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Logo on our banners</h3>
-                        <p>The Company logo will be on the banners located at both principal entries of Instituto Superior Técnico during the event.</p>
+                              <h3>Logo in our physical banners</h3>
+                        <p>The Company logo will be on the banners located at both primary entrances of IST-Alameda and also on the Computer Engineering building, IST Towers and IST-Taguspark entrance.</p>
                         <div class="column-group push-center half-gutters">
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
                             <img src="img/sponsors/banner.JPG">
@@ -835,11 +835,11 @@
                             </td></tr>
                     </tr>
                     <tr class="item">
-                      <td><div class="toggle">+</div>Logo on our banners</td>
+                      <td><div class="toggle">+</div>Logo in our physical banners</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
-                                <h3>Logo on our banners</h3>
-                          <p>The Company logo will be on the banners located at both principal entries of Instituto Superior Técnico during the event.</p>
+                                <h3>Logo in our physical banners</h3>
+                          <p>The Company logo will be on the banners located at both primary entrances of IST-Alameda and also on the Computer Engineering building, IST Towers and IST-Taguspark entrance.</p>
                           <div class="column-group push-center half-gutters">
                             <div class="all-50 medium-60 small-100 tiny-100 push-center">
                               <img src="img/sponsors/banner.JPG">
